<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modelsheets.savedSummeryDeleteModel">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/remove_model_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="30dp"
            android:text="@string/remove_itm_title"
            android:textAlignment="center"
            android:textColor="@color/input_hint_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="231dp"
            android:layout_height="37dp"
            android:text="@string/remove_itm_description"
            android:textAlignment="center" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/secondary_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/remove_btn_txt"
            android:textColor="@color/primary_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancel_delete_btn"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/secondory_btn_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancel_btn_text"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>