<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/primary_color"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:id="@+id/tv_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summery_topic"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue_A700"/>

        <!-- Description -->
        <TextView
            android:id="@+id/tv_card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_description_txt"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <!-- Footer Row -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Date -->
            <TextView
                android:id="@+id/tv_card_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_card_date"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/google_green"/>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
